drkns 01.03.2018 21:45:36 +0000 - build 5155

1. Рефакторинг.

MZK 28.02.2018 22:26:27 -0800

1. Перевёл и поредактировал страницу @Viewer справки (английскую и русскую).

drkns 01.03.2018 00:25:44 +0000 - build 5154

1. Продолжение 5150.3.

2. Рефакторинг.

zg 28.02.2018 14:24:01 +0200 - build 5153

1. ECTL_SETSTRING при пустой строке не устанавливал eol.

zg 27.02.2018 13:51:24 +0200 - build 5152

1. уточнение 5150.2.

drkns 26.02.2018 00:18:23 +0000 - build 5151

1. fmt v5.

drkns 25.02.2018 23:42:42 +0000 - build 5150

1. Настройки сортировки (numeric & case-sensitive) вынесены в System Settings.
   Там же теперь можно выбрать базовое сравнение (linguistic / invariant / ordinal).
   Настройки сортировки применяются глобально ко всему.

2. Для плагинов доступна функция FSF.CompareStrings, позволяющая сортировать так же, как сортирует Far (как именно - не оговорено и зависит от настроек).
   FSF.LStricmp и FSF.LStrnicmp - deprecated и не рекомендуются к использованию.

3. FCTL_SETNUMERICSORT, FCTL_SETCASESENSITIVESORT, PFLAGS_NUMERICSORT, PFLAGS_CASESENSITIVESORT больше нет.

MZK 22.02.2018 23:18:21 -0800

1. Отредактировал страницу @CopyFiles справки (английскую и русскую).

2. Мелкие добавления и уточнения справки, перевод на английский.

MZK 21.02.2018 22:37:57 -0800 - build 5149

1. Пофиксил ошибку компиляции в VC15 64-бит: C3487: 'int': all return expressions must deduce to the same type: previously it was '__int64'.

drkns 21.02.2018 21:29:53 +0000 - build 5148

1. Числовая сортировка теперь больше похожа на "как в Windows" в плане обработки идущих подряд нулей.

2. В Windows 7 и выше для регистронезависимой числовой сортировки используется системная функция (SORT_DIGITSASNUMBERS).

drkns 21.02.2018 01:56:58 +0000 - build 5147

1. Показываем имя модуля в stack trace.

zg 17.02.2018 17:43:21 +0200 - build 5146

1. 0003580: Текст в поле ввода смещается при вводе текста в другое поле.

MZK 13.02.2018 23:19:56 -0800
